# OpenglLearn

./: .gitignore  README.md
C++/CMake/cmake-3.13.0-rc3-win64-x64/doc/cmake/html/: genindex.html  index.html  search.html  searchindex.js
C++/CMake/cmake-3.13.0-rc3-win64-x64/doc/cmake/html/_static/: documentation_options.js
C++/CMake/cmake-3.13.0-rc3-win64-x64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  elseif.html  enable_language.html  enable_testing.html  (+82 more)
C++/CMake/cmake-3.13.0-rc3-win64-x64/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
C++/CMake/cmake-3.13.0-rc3-win64-x64/doc/cmake/html/envvar/: ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CFLAGS.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_CONFIG_TYPE.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_OSX_ARCHITECTURES.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  CUDACXX.html  CUDAFLAGS.html  CUDAHOSTCXX.html  CXX.html  CXXFLAGS.html  DASHBOARD_TEST_FROM_CTEST.html  DESTDIR.html  FC.html  FFLAGS.html  LDFLAGS.html  MACOSX_DEPLOYMENT_TARGET.html  PackageName_ROOT.html  RC.html  RCFLAGS.html
C++/CMake/cmake-3.13.0-rc3-win64-x64/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  Ninja.html  (+16 more)
C++/CMake/cmake-3.13.0-rc3-win64-x64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
C++/CMake/cmake-3.13.0-rc3-win64-x64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
C++/Projects/HelloWorld/: CMakeLists.txt  helloworld.cpp  printtest.cpp  printtest.h
C++/Projects/MyTestPro01/: CMakeLists.txt
C++/Projects/MyTestPro01/src/: test.cpp
GLAD/src/: glad.c
Projects/CMakeProject1/: CMakeLists.txt
Projects/CMakeProject1/cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake
Projects/CMakeProject1/includes/learnopengl/: camera.h  inpututils.h  light.h  material.h  mesh.h  model.h  shader_s.h  utils.h
Projects/CMakeProject1/lib/: glfw3.lib
Projects/CMakeProject1/src/1.getting_started/1.1.hello_world/: helloworld.cpp
Projects/CMakeProject1/src/1.getting_started/2.1.hello_triangle/: 1.1.shader.vs  hello_triangle.cpp
Projects/CMakeProject1/src/1.getting_started/2.2.hello_triangle_indexed/: 2.2.shader.fs  2.2.shader.vs  hello_triangle_indexed.cpp
Projects/CMakeProject1/src/1.getting_started/3.1.uniform/: 3.1.shader.fs  3.1.shader.vs  3.1.uniform.cpp
Projects/CMakeProject1/src/1.getting_started/3.2.more_attrib/: 3.2.more_attrib.cpp  3.2.shader.fs  3.2.shader.vs
Projects/CMakeProject1/src/1.getting_started/4.1.textures/: 4.1.shader.fs  4.1.shader.vs  4.1.textures.cpp
Projects/CMakeProject1/src/1.getting_started/5.1.transformations/: 5.1.transform.fs  5.1.transform.vs  transformations.cpp
Projects/CMakeProject1/src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_systems.cpp  6.1.shader.fs  6.1.shader.vs
Projects/CMakeProject1/src/1.getting_started/7.1.camera_circle/: camera_circle.cpp
Projects/CMakeProject1/src/1.getting_started/7.2.camera_mouse_zoom/: 7.2.shader.vs  camera_mouse_zoom.cpp
Projects/CMakeProject1/src/1.getting_started/7.3.camera_class/: 7.3.shader.fs  camera_class.cpp
Projects/CMakeProject1/src/2.lighting/1.colors/: 1.colors.fs  1.lighting_cube.fs  colors.cpp
Projects/CMakeProject1/src/2.lighting/2.1.basic_lighting/: 2.1.cube.fs  2.1.cube.vs  basic_lighting.cpp
Projects/CMakeProject1/src/2.lighting/3.1.meterials/: meterials.cpp
Projects/CMakeProject1/src/2.lighting/4.1.lighting_maps/: 4.1.light_cube.fs  4.1.light_cube.vs  4.1.lighting_maps.fs  4.1.lighting_maps.vs  lighting_maps.cpp
Projects/CMakeProject1/src/2.lighting/5.1.light_casters/: 5.1.light_casters.fs  light_casters.cpp
Projects/CMakeProject1/src/2.lighting/6.1.multiple_lights/: 6.1.light_cube.fs  6.1.light_cube.vs  6.1.multiple_lights.fs  6.1.multiple_lights.vs  multiple_lights.cpp
Projects/CMakeProject1/src/3.model_loading/1.model_loading/: 1.model_loading.fs  model_loading.cpp
Projects/CMakeProject1/src/4.advanced_opengl/1.1depth_testing/: 1.1.depth_testing.fs  1.1.depth_testing.vs  depth_testing.cpp
Projects/CMakeProject1/src/4.advanced_opengl/2.stencil_testing/: stencil_testing.cpp
Projects/Project1/: Project1.sln
Projects/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters
Projects/Project1/Project1/src/: test1.cpp
Projects/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
Projects/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projects/Project1/Project2/: Project2.vcxproj  Project2.vcxproj.filters
Projects/includes_libs/include/glad/: glad.h
(+1315 files in other folders)
